# Pay2U_Service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  setup.cfg
Pay2U_Service/: manage.py
Pay2U_Service/Pay2U_Service/: asgi.py  settings.py  urls.py  wsgi.py
Pay2U_Service/user/: managers.py  models.py
backend/: .dockerignore  Dockerfile  README.md  pytest.ini  run_django.sh
backend/api/v1/: urls.py
backend/backend/: settings.py  urls.py
backend/core/: constants.py  validators.py
backend/data/: category.csv  faq.csv  faq.json  service.csv  service.json  tariff.json
backend/faqs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/faqs/migrations/: 0001_initial.py  0002_faq_сategory.py
backend/payments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py  0002_alter_paymentmethods_icon.py  0002_initial.py  0002_remove_cashback_payment_cashback_payment_methods_and_more.py  0003_alter_cashback_options_alter_paymenthistory_options_and_more.py  0003_alter_servicecashback_type_cashback.py  0003_alter_subscriptionpayment_expired_date.py  0004_alter_cashback_amount_alter_cashback_description_and_more.py  (+12 more)
backend/services/: admin.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/tests/: conftest.py  test_services.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  vite.config.ts
infra/: nginx.conf
(+41 files in other folders)
